[gd_scene load_steps=4 format=3 uid="uid://bja1tc6ap08h5"]

[ext_resource type="Script" path="res://rooms/editor/editor.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/map/Map.tscn" id="2"]
[ext_resource type="PackedScene" path="res://helper/map_storage/MapStorage.tscn" id="3"]

[node name="Editor" type="Node2D"]
script = ExtResource( "1" )

[node name="Map" parent="." instance=ExtResource( "2" )]

[node name="LoadingUI" type="Control" parent="."]
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListMapfiles" type="ItemList" parent="LoadingUI"]
items = []
same_column_width = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLoad" type="Button" parent="LoadingUI"]
anchor_right = 0.024
text = "Load Selected"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCreate" type="Button" parent="LoadingUI"]
text = "Create new"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineCreateID" type="LineEdit" parent="LoadingUI"]
structured_text_bidi_override_options = []
placeholder_text = "newmap uid"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineCreateTitle" type="LineEdit" parent="LoadingUI"]
structured_text_bidi_override_options = []
placeholder_text = "newmap title"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapStorage" parent="." instance=ExtResource( "3" )]

[node name="EditingUI" type="Control" parent="."]
visible = false
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListBlocks" type="ItemList" parent="EditingUI"]
items = []
script = null

[node name="ListTools" type="ItemList" parent="EditingUI"]
items = []
script = null

[node name="BtnSave" type="Button" parent="EditingUI"]
text = "save"
script = null

[node name="PopSavePath" type="FileDialog" parent="EditingUI"]
show_hidden_files = true
script = null

[connection signal="pressed" from="LoadingUI/BtnLoad" to="." method="_on_BtnLoad_pressed"]
[connection signal="pressed" from="LoadingUI/BtnCreate" to="." method="_on_BtnCreate_pressed"]
[connection signal="pressed" from="EditingUI/BtnSave" to="." method="_on_BtnSave_pressed"]
[connection signal="dir_selected" from="EditingUI/PopSavePath" to="." method="_on_PopSavePath_dir_selected"]
[connection signal="file_selected" from="EditingUI/PopSavePath" to="." method="_on_PopSavePath_file_selected"]
